[gd_scene load_steps=4 format=3 uid="uid://cog1gfsb0iu47"]

[ext_resource type="FontFile" uid="uid://y2fv3f1jprtd" path="res://assets/fonts/bb.ttf" id="1_i5y55"]
[ext_resource type="Script" path="res://scripts/menus/play_button_3d.gd" id="1_t8fxs"]

[sub_resource type="BoxShape3D" id="BoxShape3D_if4w3"]
size = Vector3(10.2508, 2.13902, 1)

[node name="play_button_3d" type="Area3D"]
script = ExtResource("1_t8fxs")

[node name="Label3D" type="Label3D" parent="."]
modulate = Color(0, 1, 1, 1)
text = "Play Game"
font = ExtResource("1_i5y55")
font_size = 500
outline_size = 50

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0922012, 0.0103378, 0)
shape = SubResource("BoxShape3D_if4w3")

[node name="spin_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="timeout" from="spin_timer" to="." method="_on_spin_timer_timeout"]
